# fastapi-nordsat-ewc-fci

./: README.md  setup.cfg  setup.py
app/: __init__.py  list-of-files.txt
app/api/: endpoint.py
app/views/: dashboard.py
container/: Dockerfile  README.md  create-mamba.sh  entrypoint.sh  environment.yaml  start-reload.sh  start.sh
fastapi_nordsat_ewc/: __init__.py  main.py
fastapi_nordsat_ewc/api/: endpoint.py
fastapi_nordsat_ewc/models/: datasource.py
fastapi_nordsat_ewc/views/: dashboard.py
