[metadata]
name = fastapi-nordsat-ewc
version = attr: app.__version__
author = MET Norway
author_email = servicedesk@met.no
description = fastapi using mapscript for OGC WMS
url = https://github.com/metno/fastapi-nordsat-ewc
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/fastapi-nordsat-ewc

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    requests>=2.27.1
    pyyaml>=5.4.1
    jinja2>=3.1.1
    uvicorn>=0.17.6
    fastapi>=0.75.2

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
